crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_effect_type_values.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", effects)"
---
"[(\"None\", 0), (\"Constant\", 1), (\"Spring\", 8), (\"Damper\", 9), (\"Friction\", 10)]"
