crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_hid_report_full_left.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: report
---
SimucubeHidReport {
    steering: 0,
    y_axis: 32768,
    axes: [
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    buttons: [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
}
