crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_model_from_info.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", results)"
---
"[(\"sport\", Sport), (\"pro\", Pro), (\"ultimate\", Ultimate), (\"wrong_vid\", Unknown)]"
