crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_model_sport.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: "format!(\"name={}, max_torque={:.1}\", model.display_name(),\nmodel.max_torque_nm())"
---
"name=Simucube 2 Sport, max_torque=17.0"
