crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_model_ultimate.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: "format!(\"name={}, max_torque={:.1}\", model.display_name(),\nmodel.max_torque_nm())"
---
"name=Simucube 2 Ultimate, max_torque=35.0"
